[package]
name = "aoc"
version = "0.1.0"

authors = [
        "David Rheinsberg <david.rheinsberg@gmail.com>",
]
categories = [
        "simulation",
]
description = "Personal Advent-of-Code Workspace"
edition = "2021"
homepage = "https://github.com/dvdhrm/aoc"
keywords = [
        "advent-of-code",
        "aoc",
]
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/dvdhrm/aoc"
